--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ html, body {
   box-sizing: border-box;
 }
 .app-container {
-  height: 100%;
+  height: 100vh;
   box-sizing: border-box;
 }
 .quill {
